Version 0.6.0~dev

	* Updated database schema for status informations, refs: #2831, #2832.
	* Allow setting Importer timeout from config, refs: #2825.

Version 0.5.0 Released on 2010/01/07

	* Added a 'log' object for each plugins and jobs, refs: #2814.
	* Prepend job logs with #<status_id>, closes: #2814.
	* Add support for status informations, closes: #2832.

Version 0.4.0 Released on 2009/12/10

	* Moved streams plugin to his own debian package, refs: #2313.
	* Added one log file for each check for each plugin, closes: #2643.
	* Removed python dependencies on webengine, closes: #2644.
	* Added sub-name support in configuration fields (like "[svpd:streams:volume]"), refs: #2645.
	* Added a way for plugins to provide their conf requirements, closes: #2645.
	* Fix conflict between webengine-delivery and spvd-delivery, closes: #2613.
	* Now catches all plugins exceptions, closes: #2641.
	* Now uses python logging facilities, closes: #2655.
	* Moved events and delivery plugins to their own debian packages, refs: #2665.
	* Now spvd automatically detects its plugins checks, closes: #2675.
	* Added missing optional parameter, closes: #2686.
	* Added methods and options documentation to sample plugin, closes: #2692.
	* Removed spvd-delivery configuration in default spvd.conf, closes: #2603.
	* Import daemonization code fixes from sl2d.

Version 0.3.1 Released on 2009/10/29

	* Updated importer call due to changes in webengine-delivery, refs: #2436, 2343.

Version 0.3.0 Released on 2009/10/27

	* Added delivery plugin sets metadata for delivery selected, closes: #2436.
	* Use __import__ and getattr() to load and run plugins, closes: #2427.
	* Use __import__ and getattr() in checks-list to load and check plugins, closes: #2427.

Version 0.2.1 Released on 2009/07/02

	* Add support for SSL certificates, closes: #2051.
	* Add a __str__ method to BasePlugin.
	* Batch checks result updates, closes: #2087.

Version 0.2.0 Released on 2009/06/25
